[package]
name = "kya"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/gert7/kya"
description = "Watches for new screenshots and sends them to Gyazo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
curl = "0.4"
regex = "1.5"
lazy_static = "1.4"
dirs = "4.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[[bin]]
name = "kya-for-gyazo"
path = "src/main.rs"