[package]
name = "kya"
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/gert7/kya"
description = "Watches for new screenshots and sends them to Gyazo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
regex = "1.5"
lazy_static = "1.4"
dirs = "4.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
whoami = "1.1"
fs2 = "0.4"

[profile.release]
opt-level = "s"

[env]
DISPLAY = ":0.0"

[[bin]]
name = "kya-for-gyazo"
path = "src/main.rs"
